
[TestParseSSHDLog/Valid_SSHD_log_with_user - 1]
[]types.Cypher{
    &types.IPAddress{
        Address:   "10.0.2.2",
        Seen:      1,
        FirstSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        LastSeen:  time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
    },
    &types.Username{
        Name:     "vagrant",
        Seen:     0,
        FistSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        LastSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
    },
    &types.WithUsername{
        IPAddress: types.IPAddress{
            Address:   "10.0.2.2",
            Seen:      1,
            FirstSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
            LastSeen:  time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        },
        Username: types.Username{
            Name:     "vagrant",
            Seen:     0,
            FistSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
            LastSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        },
        FirstTime: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        LastTime:  time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
    },
    &types.Service{Name:"ssh", Port:22},
    &types.AuthenticatedOn{
        Username: types.Username{
            Name:     "vagrant",
            Seen:     0,
            FistSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
            LastSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        },
        Service:    types.Service{Name:"ssh", Port:22},
        FirstTime:  time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        LastTime:   time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        Failures:   0,
        Successes:  0,
        successful: true,
    },
    &types.ConnectedTo{
        IPAddress: types.IPAddress{
            Address:   "10.0.2.2",
            Seen:      1,
            FirstSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
            LastSeen:  time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        },
        Service:   types.Service{Name:"ssh", Port:22},
        FirstTime: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        LastTime:  time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
    },
}
---

[TestParseSSHDLog/Valid_SSHD_log_with_password - 1]
[]types.Cypher{
    &types.IPAddress{
        Address:   "192.168.33.1",
        Seen:      1,
        FirstSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        LastSeen:  time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
    },
    &types.Username{
        Name:     "vagrant",
        Seen:     0,
        FistSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        LastSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
    },
    &types.WithUsername{
        IPAddress: types.IPAddress{
            Address:   "192.168.33.1",
            Seen:      1,
            FirstSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
            LastSeen:  time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        },
        Username: types.Username{
            Name:     "vagrant",
            Seen:     0,
            FistSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
            LastSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        },
        FirstTime: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        LastTime:  time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
    },
    &types.Service{Name:"ssh", Port:22},
    &types.AuthenticatedOn{
        Username: types.Username{
            Name:     "vagrant",
            Seen:     0,
            FistSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
            LastSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        },
        Service:    types.Service{Name:"ssh", Port:22},
        FirstTime:  time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        LastTime:   time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        Failures:   0,
        Successes:  0,
        successful: true,
    },
    &types.ConnectedTo{
        IPAddress: types.IPAddress{
            Address:   "192.168.33.1",
            Seen:      1,
            FirstSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
            LastSeen:  time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        },
        Service:   types.Service{Name:"ssh", Port:22},
        FirstTime: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        LastTime:  time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
    },
}
---

[TestParseSSHDLog/Failed_SSHD_log_with_root_user - 1]
[]types.Cypher{
    &types.IPAddress{
        Address:   "116.31.116.24",
        Seen:      1,
        FirstSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        LastSeen:  time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
    },
    &types.Username{
        Name:     "root",
        Seen:     0,
        FistSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        LastSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
    },
    &types.WithUsername{
        IPAddress: types.IPAddress{
            Address:   "116.31.116.24",
            Seen:      1,
            FirstSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
            LastSeen:  time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        },
        Username: types.Username{
            Name:     "root",
            Seen:     0,
            FistSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
            LastSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        },
        FirstTime: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        LastTime:  time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
    },
    &types.Service{Name:"ssh", Port:22},
    &types.AuthenticatedOn{
        Username: types.Username{
            Name:     "root",
            Seen:     0,
            FistSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
            LastSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        },
        Service:    types.Service{Name:"ssh", Port:22},
        FirstTime:  time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        LastTime:   time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        Failures:   0,
        Successes:  0,
        successful: false,
    },
    &types.ConnectedTo{
        IPAddress: types.IPAddress{
            Address:   "116.31.116.24",
            Seen:      1,
            FirstSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
            LastSeen:  time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        },
        Service:   types.Service{Name:"ssh", Port:22},
        FirstTime: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        LastTime:  time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
    },
}
---

[TestParseSSHDLog/Failed_SSHD_log_with_invalid_user - 1]
[]types.Cypher{
    &types.IPAddress{
        Address:   "142.0.45.14",
        Seen:      1,
        FirstSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        LastSeen:  time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
    },
    &types.Username{
        Name:     "aurelien",
        Seen:     0,
        FistSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        LastSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
    },
    &types.WithUsername{
        IPAddress: types.IPAddress{
            Address:   "142.0.45.14",
            Seen:      1,
            FirstSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
            LastSeen:  time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        },
        Username: types.Username{
            Name:     "aurelien",
            Seen:     0,
            FistSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
            LastSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        },
        FirstTime: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        LastTime:  time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
    },
    &types.Service{Name:"ssh", Port:22},
    &types.AuthenticatedOn{
        Username: types.Username{
            Name:     "aurelien",
            Seen:     0,
            FistSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
            LastSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        },
        Service:    types.Service{Name:"ssh", Port:22},
        FirstTime:  time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        LastTime:   time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        Failures:   0,
        Successes:  0,
        successful: false,
    },
    &types.ConnectedTo{
        IPAddress: types.IPAddress{
            Address:   "142.0.45.14",
            Seen:      1,
            FirstSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
            LastSeen:  time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        },
        Service:   types.Service{Name:"ssh", Port:22},
        FirstTime: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        LastTime:  time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
    },
}
---

[TestParseSSHDLog/Invalid_user_SSHD_log - 1]
[]types.Cypher{
    &types.IPAddress{
        Address:   "10.0.2.2",
        Seen:      1,
        FirstSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        LastSeen:  time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
    },
    &types.Username{
        Name:     "test",
        Seen:     0,
        FistSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        LastSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
    },
    &types.WithUsername{
        IPAddress: types.IPAddress{
            Address:   "10.0.2.2",
            Seen:      1,
            FirstSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
            LastSeen:  time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        },
        Username: types.Username{
            Name:     "test",
            Seen:     0,
            FistSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
            LastSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        },
        FirstTime: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        LastTime:  time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
    },
    &types.Service{Name:"ssh", Port:22},
    &types.AuthenticatedOn{
        Username: types.Username{
            Name:     "test",
            Seen:     0,
            FistSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
            LastSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        },
        Service:    types.Service{Name:"ssh", Port:22},
        FirstTime:  time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        LastTime:   time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        Failures:   0,
        Successes:  0,
        successful: false,
    },
    &types.ConnectedTo{
        IPAddress: types.IPAddress{
            Address:   "10.0.2.2",
            Seen:      1,
            FirstSeen: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
            LastSeen:  time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        },
        Service:   types.Service{Name:"ssh", Port:22},
        FirstTime: time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
        LastTime:  time.Date(2038, time.January, 19, 3, 14, 7, 0, time.UTC),
    },
}
---
